# VAE-Plus

./: README.md  download_data.sh  pyproject.toml  train_transformer.py
notebooks/: data_prep.ipynb  dev.ipynb  eval.ipynb  preproccess_to_memmap.ipynb  tests.ipynb  train_moses.ipynb  train_uniref.ipynb  transformer_dev.ipynb  uniref50_download.ipynb
notebooks/.ipynb_checkpoints/: tests-checkpoint.ipynb
notebooks/lightning_logs/version_10/: metrics.csv
notebooks/lightning_logs/version_11/: hparams.yaml  metrics.csv
notebooks/lightning_logs/version_3/: hparams.yaml
notebooks/lightning_logs/version_5/: hparams.yaml
notebooks/lightning_logs/version_8/: hparams.yaml
vae_cyc/: __init__.py  dataset.py  rnn.py  transformer.py  vocab.py
vae_cyc/.ipynb_checkpoints/: dataset-checkpoint.py  rnn-checkpoint.py  transformer-checkpoint.py
